Prevent "Third-place" from wrapping unnecessarily

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -67,6 +67,10 @@ div.results-index-card-grid {
     div.summary {
       position: absolute;
       bottom: 0;
+
+      dt {
+        white-space: nowrap;
+      }
     }
   }
 }
